--- a/Colors/style.css
+++ b/Colors/style.css
@@ -37,6 +37,10 @@ svg {
 .color h2 {
   font-size: 2rem;
   cursor: pointer;
+  color: rgb(255, 255, 255);
+}
+
+.colors span {
   color: gray;
 }
 
@@ -45,7 +49,7 @@ svg {
   flex-direction: column;
   position: absolute;
   bottom: 0%;
-  background: rgb(225, 225, 225);
+  background: rgb(255, 255, 255);
   /* opacity: 0; */
   padding: 1rem;
   width: 80%;
@@ -70,8 +74,8 @@ svg {
   border-top-left-radius: 1rem;
   border-bottom-left-radius: 1rem;
   border: none;
-  background: rgb(73, 73, 73);
-  color: white;
+  background: rgb(77, 75, 75);
+  color: rgb(255, 255, 255);
   cursor: pointer;
   font-weight: bold;
 }
@@ -127,4 +131,49 @@ input[type="range"] {
   position: relative;
   border-radius: 1rem;
   cursor: pointer;
+}
+input[type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  background-color: rgb(255, 255, 255);
+  width: 10px;
+  height: 26px;
+}
+
+.copy-container {
+  position: fixed;
+  top: 0%;
+  left: 0%;
+  background: rgba(0, 0, 0, 0.4);
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  pointer-events: none;
+}
+
+.copy-popup {
+  background: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  border-radius: 2rem;
+  transition: transform 0.5s ease;
+  transform: translateY(-2rem);
+  min-width: 30%;
+  min-height: 30vh;
+}
+.copy-popup h4 {
+  font-size: 2rem;
+  padding: 2rem;
+}
+
+.copy-container.active {
+  opacity: 1;
+  pointer-events: all;
+}
+.copy-popup.active {
+  transform: translateY(0rem);
 }
