--- a/Colors/style.css
+++ b/Colors/style.css
@@ -50,14 +50,14 @@ svg {
   position: absolute;
   bottom: 0%;
   background: rgb(255, 255, 255);
-  /* opacity: 0; */
+  opacity: 0;
   padding: 1rem;
   width: 80%;
   border-top-right-radius: 1rem;
-  /* pointer-events: none; */
+  pointer-events: none;
   border-top-left-radius: 1rem;
 
-  /* transform: translateY(100px); */
+  transform: translateY(100px);
   transition: all 0.5s ease-in-out;
 }
 .sliders.active {
@@ -66,7 +66,9 @@ svg {
   pointer-events: all;
 }
 
-.sliders button {
+.sliders button,
+.close-save,
+.close-library {
   position: absolute;
   top: 0;
   right: 0;
@@ -139,7 +141,9 @@ input[type="range"]::-webkit-slider-thumb {
   height: 26px;
 }
 
-.copy-container {
+.copy-container,
+.save-container,
+.library-container {
   position: fixed;
   top: 0%;
   left: 0%;
@@ -148,12 +152,15 @@ input[type="range"]::-webkit-slider-thumb {
   height: 100%;
   display: flex;
   justify-content: center;
+  transition: all 0.5s ease-out;
   align-items: center;
   opacity: 0;
   pointer-events: none;
 }
 
-.copy-popup {
+.copy-popup,
+.save-popup,
+.library-popup {
   background: white;
   display: flex;
   flex-direction: column;
@@ -165,15 +172,87 @@ input[type="range"]::-webkit-slider-thumb {
   min-width: 30%;
   min-height: 30vh;
 }
-.copy-popup h4 {
+.copy-popup h4,
+.save-popup h4,
+.library-popup h4 {
   font-size: 2rem;
   padding: 2rem;
 }
 
-.copy-container.active {
+.copy-container.active,
+.save-container.active,
+.library-container.active {
   opacity: 1;
   pointer-events: all;
 }
-.copy-popup.active {
+.copy-popup.active,
+.save-popup.active,
+.library-popup.active {
   transform: translateY(0rem);
+}
+
+.save-name {
+  font-size: 1.5rem;
+  padding: 0.5rem;
+}
+.close-save {
+  border-top-right-radius: 7rem;
+  border-bottom-left-radius: 4rem;
+  padding: 0.5rem;
+}
+.close-library {
+  border-top-right-radius: 0.5rem;
+  border-bottom-left-radius: 1.1rem;
+  padding: 0.5rem;
+}
+
+.submit-save {
+  margin: 2rem;
+  padding: 1rem, 3rem;
+  background: rgb(60, 60, 92);
+  border: none;
+  border-radius: 2px;
+  color: white;
+  cursor: pointer;
+  height: 35px;
+  width: 100px;
+}
+
+.library-popup {
+  min-width: 70%;
+  padding: 1rem;
+  justify-content: flex-start;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  max-height: 50vh;
+}
+.custom-palette {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  width: 100%;
+  padding: 2rem;
+}
+
+.small-preview {
+  display: inline-flex;
+  flex: 1;
+}
+.custom-palette h4 {
+  flex: 1;
+}
+
+.small-preview div {
+  height: 5rem;
+  flex: 1;
+}
+.pick-palette-btn {
+  height: 5rem;
+  border: none;
+  padding: 1rem;
+  cursor: pointer;
+  font-size: 1.2rem;
+  background: rgb(41, 41, 41);
+  color: white;
+  margin-left: 5rem;
 }
